# sp500-forecast

./: .gitignore  CLAUDE.md  DATA_REPORT.md  PLAN.md  README.md  benchmarks.py  digest.py  fetch_sp500_data.py  forecast.py  phase3_level0.py  phase4_level2.py  phase5_fanchart.py  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  tests.yml  weekly_digest.yml
.streamlit/: config.toml
app/: benchmarks.json  forecast.json  history.json  streamlit_app.py
data/processed/: _coverage_table.md  annual_pivots.csv  fred_monthly.csv  level0_backtest_summary.json  level0_features_monthly.csv  level2_backtest_summary.json  level2_features_monthly.csv  level5_calibration_summary.json  master_monthly.csv  nikkei_daily.csv  shiller_monthly.csv  spx_daily.csv
tests/: conftest.py  test_acceptance.py  test_episodes.py  test_forecast_regression.py  test_handcalc.py
