[project]
name = "sp500-data"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.15.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
    "xlrd>=2.0.2",
    "yfinance>=1.4.1",
]
