[project]
name = "sp500-data"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arch>=8.0.0",
    "curl-cffi>=0.15.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
    "xlrd>=2.0.2",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: recomputes GARCH walk-forward (run nightly, not on every PR)"]
